@@ -1,9 +1,9 @@
 package alkewallet.api;
 
-import java.io.BufferedReader;
-import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.util.HashMap;
 
 import com.google.gson.Gson;
@@ -14,7 +14,7 @@ import alkewallet.model.MonedaDolar;
 import alkewallet.model.MonedaEuro;
 
 public class ApiMonedas {
-    private HashMap<String, Moneda> monedas=new HashMap<>();
+    private HashMap<String, Moneda> monedas = new HashMap<>();
 
     public ApiMonedas() {}
 
@@ -23,46 +23,46 @@ public class ApiMonedas {
     }
 
     public void GetIndicadores(){
-        try{
-            @SuppressWarnings("deprecation")
-            URL url = new URL("https://mindicador.cl/api");
-            HttpURLConnection connection = (HttpURLConnection)url.openConnection();
-            connection.setRequestMethod("GET");
-            int codRespuesta = connection.getResponseCode();
+        try {
+            URI uri = new URI("https://mindicador.cl/api");
+            HttpClient client = HttpClient.newHttpClient();
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(uri)
+                    .GET()
+                    .build();
+            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
 
-            if(codRespuesta != 200){
-                throw new RuntimeException("ocurrio un error" + codRespuesta);
-            }else{
-                BufferedReader in = new BufferedReader(new InputStreamReader(connection.getInputStream()));
-                String inputLine;
-                StringBuilder response = new StringBuilder();
-                while((inputLine = in.readLine()) != null){
-                    response.append(inputLine);
-                }
-                in.close();
-
-                String jsonString = response.toString();
+            if (response.statusCode() != 200) {
+                throw new RuntimeException("Ocurrió un error: " + response.statusCode());
+            } else {
+                String jsonString = response.body();
 
                 Gson gson = new Gson();
                 JsonObject jsonObject = gson.fromJson(jsonString, JsonObject.class);
                 JsonObject dolar = jsonObject.getAsJsonObject("dolar");
                 JsonObject euro = jsonObject.getAsJsonObject("euro");
-                monedas.put(dolar.get("codigo").getAsString(), 
-                new MonedaDolar(dolar.get("codigo").getAsString(),"$", "Dolares",
-                dolar.get("valor").getAsDouble()));
-                monedas.put(euro.get("codigo").getAsString(), 
-                new MonedaEuro(euro.get("codigo").getAsString(),"€", "Euros",
-                euro.get("valor").getAsDouble()));
-                
 
+                double valorDolar = dolar.get("valor").getAsDouble();
+                double valorEuro = euro.get("valor").getAsDouble();
+
+                // Redondear los valores a enteros
+                int valorDolarRedondeado = (int) Math.round(valorDolar);
+                int valorEuroRedondeado = (int) Math.round(valorEuro);
+
+                monedas.put(dolar.get("codigo").getAsString(), 
+                        new MonedaDolar(dolar.get("codigo").getAsString(), "$", "Dolares", 
+                        valorDolarRedondeado));
+                monedas.put(euro.get("codigo").getAsString(), 
+                        new MonedaEuro(euro.get("codigo").getAsString(), "€", "Euros", 
+                        valorEuroRedondeado));
             }
 
         } catch (Exception e) {
             e.printStackTrace();
         }
     }
+
     public HashMap<String, Moneda> getMonedas() {
         return monedas;
     }
-    
 }
